Request location permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Let\'s Eat</string>
+    <string name="permission_rationale">Location permission is used to find the best places nearby.</string>
 </resources>
