Display random food place when button is clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Let\'s Eat</string>
     <string name="permission_location">Location Permission</string>
     <string name="permission_location_rationale">Location data is used to find the best places nearby.</string>
+    <string name="error_location">Something went wrong!</string>
+    <string name="ok">@android:string/ok</string>
 </resources>
