--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="permission_location_rationale">Location data is used to find the best places nearby.</string>
     <string name="error_location">Something went wrong!</string>
     <string name="ok">@android:string/ok</string>
-    <string name="missing_location">No locations were found!</string>
+    <string name="missing_place">No places were found!</string>
+    <string name="desc_image_location">Image of the location</string>
 </resources>
